Load Request Cancel

--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -198,6 +198,9 @@
               <div class="example-element-description" *ngIf="expandedElement === row">
                 <fieldset>
                   <legend>Load Request</legend>
+                  <button *ngIf="row.requestStatus === 'Open'" mat-fab extended (click)="openCancelDialog(row.requestId)">
+                    Cancel
+                  </button>
                   <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
                   <app-load-request-activity [requestId]="row.requestId"
                                              [loadRequestActivities]="row.loadRequestActivities"></app-load-request-activity>
