--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
@@ -192,49 +192,8 @@
         </table>
       </fieldset>
 
-      <fieldset *ngIf="verificationRuleMessages$ | async as verificationRuleMessages">
-        <legend>Rule Messages</legend>
-        <table mat-table [dataSource]="verificationRuleMessages">
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Rule Name</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="messageGroup">
-            <th mat-header-cell *matHeaderCellDef>Message Group</th>
-            <td mat-cell *matCellDef="let element"
-                [ngClass]="{
-                'text-red-700' : element.messageGroup==='Error',
-                'text-orange-400' : element.messageGroup==='Warning',
-                'text-green-400' : element.messageGroup==='Info'
-                }">
-              {{element.messageGroup}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="messageType">
-            <th mat-header-cell *matHeaderCellDef>Message Type</th>
-            <td mat-cell *matCellDef="let element">{{element.messageType}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="tag">
-            <th mat-header-cell *matHeaderCellDef>Tag</th>
-            <td mat-cell *matCellDef="let element">{{element.tag}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="message">
-            <th mat-header-cell *matHeaderCellDef>Message</th>
-            <td mat-cell *matCellDef="let element">{{element.message}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="creationTime">
-            <th mat-header-cell *matHeaderCellDef>Creation Time</th>
-            <td mat-cell *matCellDef="let element">{{element.creationTime}}</td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="verificationRuleMessagesColumn"></tr>
-          <tr mat-row *matRowDef="let row; columns: verificationRuleMessagesColumn;"></tr>
-        </table>
-      </fieldset>
+      <app-load-version-report-rule-message [verificationRuleMessages]="(verificationRuleMessages$ | async) || []">
+      </app-load-version-report-rule-message>
     </mat-expansion-panel>
 
     <mat-expansion-panel expanded="true" togglePosition="before">
