--- a/projects/ts-etl-ui/src/load-version-report-rule-message/load-version-report-rule-message.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-rule-message/load-version-report-rule-message.component.html
@@ -1,5 +1,4 @@
-<form [formGroup]="searchCriteria" (ngSubmit)="applyFilter()">
-  <button type="submit" class="hidden">search</button>
+<form [formGroup]="searchCriteria">
   <fieldset>
     <legend>Rule Messages</legend>
     <table mat-table [dataSource]="dataSource()">
