--- a/projects/ts-etl-ui/src/load-version-report-rule-message/load-version-report-rule-message.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-rule-message/load-version-report-rule-message.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="searchCriteria">
   <fieldset>
     <legend>Rule Messages</legend>
-    <table mat-table [dataSource]="dataSource()">
+    <table mat-table [dataSource]="dataSource()" matSort>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Rule Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Rule Name</th>
         <td mat-cell *matCellDef="let element">{{element.name}}</td>
       </ng-container>
       <ng-container matColumnDef="name-search">
@@ -16,7 +16,7 @@
       </ng-container>
 
       <ng-container matColumnDef="messageGroup">
-        <th mat-header-cell *matHeaderCellDef>Message Group</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Message Group</th>
         <td mat-cell *matCellDef="let element"
             [ngClass]="{
                 'text-red-700' : element.messageGroup==='Error',
@@ -37,7 +37,7 @@
       </ng-container>
 
       <ng-container matColumnDef="messageType">
-        <th mat-header-cell *matHeaderCellDef>Message Type</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Message Type</th>
         <td mat-cell *matCellDef="let element">{{element.messageType}}</td>
       </ng-container>
       <ng-container matColumnDef="messageType-search">
@@ -52,7 +52,7 @@
       </ng-container>
 
       <ng-container matColumnDef="tag">
-        <th mat-header-cell *matHeaderCellDef>Tag</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tag</th>
         <td mat-cell *matCellDef="let element">{{element.tag}}</td>
       </ng-container>
       <ng-container matColumnDef="tag-search">
@@ -67,7 +67,7 @@
       </ng-container>
 
       <ng-container matColumnDef="message">
-        <th mat-header-cell *matHeaderCellDef>Message</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Message</th>
         <td mat-cell *matCellDef="let element">{{element.message}}</td>
       </ng-container>
       <ng-container matColumnDef="message-search">
@@ -80,7 +80,7 @@
       </ng-container>
 
       <ng-container matColumnDef="creationTime">
-        <th mat-header-cell *matHeaderCellDef>Creation Time</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Creation Time</th>
         <td mat-cell *matCellDef="let element">{{element.creationTime}}</td>
       </ng-container>
       <ng-container matColumnDef="creationTime-search">
@@ -96,5 +96,6 @@
       <tr mat-header-row *matHeaderRowDef="searchRowColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: verificationRuleMessagesColumn;"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of rule messages"></mat-paginator>
   </fieldset>
 </form>
