--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
@@ -119,79 +119,8 @@
           <tr mat-row *matRowDef="let row; columns: verificationSummaryColumn;"></tr>
         </table>
       </fieldset>
-
-      <fieldset *ngIf="verificationQARules$ | async as verificationQARules">
-        <legend>QA Rules</legend>
-        <table mat-table [dataSource]="verificationQARules">
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Rule Name</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef>Rule Description</th>
-            <td mat-cell *matCellDef="let element">{{element.description}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="dataAvailable">
-            <th mat-header-cell *matHeaderCellDef>Data Available</th>
-            <td mat-cell *matCellDef="let element">{{element.dataAvailable}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="messagesGroupCount">
-            <th mat-header-cell *matHeaderCellDef colspan="3">Message Group Count</th>
-            <ng-container *matCellDef="let element">
-              <td mat-cell [ngClass]="element.messagesGroupCount.numOfError>0?'text-red-700':''">
-                <div class="flex align-middle justify-end">
-                  <mat-icon fontIcon="error" class="text-base"
-                            *ngIf="element.messagesGroupCount.numOfError>0"></mat-icon>
-                  {{element.messagesGroupCount.numOfError}}
-                </div>
-              </td>
-              <td mat-cell [ngClass]="element.messagesGroupCount.numOfWarning>0?'text-orange-400':''">
-                <div class="flex align-middle justify-end">
-                  <mat-icon fontIcon="warning" class="text-base"
-                            *ngIf="element.messagesGroupCount.numOfWarning>0"></mat-icon>
-                  {{element.messagesGroupCount.numOfWarning}}</div>
-              </td>
-              <td mat-cell>{{element.messagesGroupCount.numOfInfo}}</td>
-            </ng-container>
-          </ng-container>
-
-          <ng-container matColumnDef="empty">
-            <th mat-header-cell *matHeaderCellDef colspan="3"></th>
-          </ng-container>
-
-          <ng-container matColumnDef="numberOfError">
-            <th mat-header-cell *matHeaderCellDef> Error</th>
-          </ng-container>
-
-          <ng-container matColumnDef="numberOfWarning">
-            <th mat-header-cell *matHeaderCellDef> Warning</th>
-          </ng-container>
-
-          <ng-container matColumnDef="numberOfInfo">
-            <th mat-header-cell *matHeaderCellDef> Info</th>
-          </ng-container>
-
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let element">
-              <div class="flex align-middle justify-end">
-                <mat-checkbox></mat-checkbox>
-                <button mat-icon-button [cdkCopyToClipboard]="element">
-                  <mat-icon fontIcon="content_copy"></mat-icon>
-                </button>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="verificationQARulesColumn"></tr>
-          <tr mat-header-row *matHeaderRowDef="['empty','numberOfError','numberOfWarning','numberOfInfo']"></tr>
-          <tr mat-row *matRowDef="let row; columns: verificationQARulesColumn;"></tr>
-        </table>
-      </fieldset>
-
+      <app-load-version-report-rule [verificationQARules]="(verificationQARules$ | async) || []">
+      </app-load-version-report-rule>
       <app-load-version-report-rule-message [verificationRuleMessages]="(verificationRuleMessages$ | async) || []">
       </app-load-version-report-rule-message>
     </mat-expansion-panel>
