--- a/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
@@ -20,7 +20,12 @@
         <td mat-cell *matCellDef="let element">{{element.description}}</td>
       </ng-container>
       <ng-container matColumnDef="description-search">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>
+          <div class="flex flex-col m-2">
+            <input id="descriptionFilterInput" class="w-3/4" matInput formControlName="description"
+                   placeholder="search">
+          </div>
+        </th>
       </ng-container>
 
       <ng-container matColumnDef="dataAvailable">
