--- a/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
@@ -56,7 +56,7 @@
       </ng-container>
 
       <ng-container matColumnDef="empty">
-        <th mat-header-cell *matHeaderCellDef colspan="3"></th>
+        <th mat-header-cell *matHeaderCellDef></th>
       </ng-container>
 
       <ng-container matColumnDef="numberOfError">
