--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -1,4 +1,7 @@
-<h2 mat-dialog-title>Request Creation</h2>
+<h2 *ngIf="existingLoadRequest?.requestId; else newReqH2" mat-dialog-title>Edit Request</h2>
+<ng-template #newReqH2>
+  <h2 mat-dialog-title>Request Creation</h2>
+</ng-template>
 <form [formGroup]="loadRequestCreationForm">
   <mat-dialog-content class="mat-typography">
     <div class="flex flex-col">
