qa report identification

--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
@@ -13,20 +13,8 @@
           </mat-icon>
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <div class="flex flex-row">
-        <fieldset *ngIf="identification1$ | async as identification" class="flex flex-col basis-1/2">
-          <dl *ngFor="let item of identification | keyvalue">
-            <dt>{{ item.key }}:</dt>
-            <dd>{{ item.value }}</dd>
-          </dl>
-        </fieldset>
-        <fieldset *ngIf="identification2$ | async as identification" class="flex flex-col basis-1/2">
-          <dl *ngFor="let item of identification | keyvalue">
-            <dt>{{ item.key }}:</dt>
-            <dd>{{ item.value }}</dd>
-          </dl>
-        </fieldset>
-      </div>
+      <app-load-version-report-identification
+        [identification$]="identification$"></app-load-version-report-identification>
     </mat-expansion-panel>
 
     <mat-expansion-panel expanded="true" togglePosition="before">
