--- a/server/views/nih-login.ejs
+++ b/server/views/nih-login.ejs
@@ -46,7 +46,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <select class="form-select" multiple aria-label="Multiple select example" name="ticket">
+                    <select class="form-select" multiple aria-label="Multiple select username" name="ticket">
                         <option value="peter-ticket">Peter</option>
                         <option value="christophe-ticket">Christophe</option>
                     </select>
