Change main menu names

--- a/projects/ts-etl-ui/src/code-system-code/code-system-code.component.html
+++ b/projects/ts-etl-ui/src/code-system-code/code-system-code.component.html
@@ -39,6 +39,6 @@
       </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code system codes"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code system codes" [showFirstLastButtons]="true"></mat-paginator>
   </div>
 </div>
