--- a/projects/ts-etl-ui/src/code-system/code-system.component.html
+++ b/projects/ts-etl-ui/src/code-system/code-system.component.html
@@ -55,5 +55,6 @@
             </tr>
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code systems"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code systems" [showFirstLastButtons]="true"></mat-paginator>
     </div>
+</div>
