--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -141,7 +141,7 @@
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
               <label for="requestStartTime" class="m-2" mat-sort-header disableClear>Request Time</label>
-            </div>
+            </div>>
           </th>
           <td mat-cell
               *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
@@ -237,7 +237,7 @@
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 50, 100]"
                    [pageIndex]="currentLoadRequestSearchCriteria.pagination.pageNum - 1"
                    [pageSize]="currentLoadRequestSearchCriteria.pagination.pageSize"
-                   (page)="handlePageEvent($event)"
+                   (page)="handlePageEvent($event)" [showFirstLastButtons]="true"
                    aria-label="Select page of load requests"></mat-paginator>
   </div>
 </form>
