--- a/projects/ts-etl-ui/src/load-version-identification/load-version-report-identification.component.html
+++ b/projects/ts-etl-ui/src/load-version-identification/load-version-report-identification.component.html
@@ -2,7 +2,16 @@
   <fieldset *ngIf="identification1$() | async as identification" class="flex flex-col basis-1/2">
     <dl *ngFor="let item of identification | keyvalue : sourceInformationKeysCompareFn1">
       <dt>{{ item.key }}:</dt>
-      <dd>{{ item.value }}</dd>
+      <dd>
+        <ng-container [ngSwitch]="item.key">
+          <ng-container *ngSwitchCase="'Elapsed Time'">
+            {{item.value | date:'hh:mm:ss'}}
+          </ng-container>
+          <ng-container *ngSwitchDefault>
+            {{item.value}}
+          </ng-container>
+        </ng-container>
+      </dd>
     </dl>
   </fieldset>
   <fieldset *ngIf="identification2$() | async as identification" class="flex flex-col basis-1/2">
