--- a/projects/ts-etl-ui/src/app/app.component.html
+++ b/projects/ts-etl-ui/src/app/app.component.html
@@ -11,6 +11,7 @@
     </ng-container>
   </span>
   <ng-container *ngIf="(userService.user$ | async) as user;  else logInTemplate">
+    {{user | json}}
     <button mat-button [matMenuTriggerFor]="userMenu">{{user.utsUser.username}}</button>
   </ng-container>
   <mat-menu #userMenu="matMenu">
