--- a/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
+++ b/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Login with Following</h2>
+<h2 mat-dialog-title>Login with Following {{environment.environmentName}}</h2>
 <mat-dialog-content class="mat-typography">
   <div class="mt-3">
     <button mat-raised-button (click)="redirectToLogin()">UTS</button>
