--- a/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-rule/load-version-report-rule.component.html
@@ -75,7 +75,9 @@
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
           <div class="flex align-middle justify-end">
-            <mat-checkbox></mat-checkbox>
+            <mat-icon
+              *ngIf="element.messages.length"
+              (click)="openLogViewer(element)">announcement</mat-icon>
             <button mat-icon-button [cdkCopyToClipboard]="element">
               <mat-icon fontIcon="content_copy"></mat-icon>
             </button>
