qa report validation

--- a/projects/ts-etl-ui/src/load-summary/load-summary.component.html
+++ b/projects/ts-etl-ui/src/load-summary/load-summary.component.html
@@ -16,7 +16,7 @@
     </ng-container>
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef disableClear>Duration</th>
-      <td mat-cell *matCellDef="let element">{{element.duration | date: 'hh:mm:ss }}</td>
+      <td mat-cell *matCellDef="let element">{{element.duration | date: 'hh:mm:ss' }}</td>
     </ng-container>
     <ng-container matColumnDef="error">
       <th mat-header-cell *matHeaderCellDef disableClear>error</th>
