qa report comparision

--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
@@ -85,6 +85,7 @@
           Comparison
         </mat-panel-title>
       </mat-expansion-panel-header>
+      <app-load-version-report-comparison></app-load-version-report-comparison>
     </mat-expansion-panel>
   </mat-accordion>
 </fieldset>
