--- a/projects/ts-etl-ui/src/log-view-modal/log-view-modal.component.html
+++ b/projects/ts-etl-ui/src/log-view-modal/log-view-modal.component.html
@@ -1,13 +1,15 @@
 <h2 mat-dialog-title>Log Notes</h2>
 <mat-dialog-content class="mat-typography">
-  <div *ngFor="let group of ['Error', 'Warning', 'Info']">
-    <h3 *ngIf="groupedMessages[group]?.length">{{ group }}</h3>
-    <ul *ngIf="groupedMessages[group]?.length">
-      <li *ngFor="let message of groupedMessages[group]">
-        <strong>{{ message.tag }}:</strong> {{ message.message }}
-        <small>({{ message.creationTime }})</small>
-      </li>
-    </ul>
+  <div *ngFor="let groupedMessage of groupedMessages | keyvalue">
+    <h3 *ngIf="groupedMessage">{{ groupedMessage.key }}</h3>
+    <ng-container *ngIf="groupedMessage.value as messages">
+      <ul *ngIf="messages?.length">
+        <li *ngFor="let message of messages">
+          <strong>{{ message.tag }}:</strong> {{ message.message }}
+          <small>({{ message.creationTime }})</small>
+        </li>
+      </ul>
+    </ng-container>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
