--- a/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
+++ b/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
@@ -1,29 +1,32 @@
-<table class="mat-elevation-z8 my-3" mat-table [dataSource]="loadVersionActivityNotes()" matSort>
-  <caption>Notes</caption>
-  <ng-container matColumnDef="tags">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
-    <td mat-cell *matCellDef="let noteRow">TODO: What Goes Here?</td>
+<fieldset>
+  <legend>QA Notes</legend>
+  <table class="mat-elevation-z8 my-3" mat-table [dataSource]="unwoundActivities()" matSort>
+  <ng-container matColumnDef="activityId">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Activity ID</th>
+    <td mat-cell *matCellDef="let activity">{{activity.id | date: 'YYYY-MM-dd'}}</td>
+  </ng-container>
+  <ng-container matColumnDef="hashtags">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Hashtags</th>
+    <td mat-cell *matCellDef="let activity">
+      <div *ngFor="let tag of activity.notes.hashtags">
+        #{{tag}}
+      </div>
+    </td>
   </ng-container>
   <ng-container matColumnDef="notes">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Notes</th>
-    <td mat-cell *matCellDef="let noteRow">{{noteRow.notes}}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Note</th>
+    <td mat-cell *matCellDef="let activity">{{activity.notes.notes}}</td>
   </ng-container>
   <ng-container matColumnDef="createdBy">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created By
-    </th>
-    <td mat-cell *matCellDef="let noteRow">{{noteRow.createdBy}}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>User</th>
+    <td mat-cell *matCellDef="let activity">{{activity.notes.createdBy}}</td>
   </ng-container>
   <ng-container matColumnDef="createdTime">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created
-      Time
-    </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Creation Time</th>
     <td mat-cell
-        *matCellDef="let noteRow">{{noteRow.createdTime}}</td>
-  </ng-container>
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Action</th>
-    <td mat-cell *matCellDef="let noteRow">TODO: View</td>
+        *matCellDef="let activity">{{activity.notes.createdTime}}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
   <tr mat-row *matRowDef="let noteRow; columns: notesColumns"></tr>
 </table>
+</fieldset>
