--- a/projects/ts-etl-ui/src/load-version-report-comparison/load-version-report-comparison.component.html
+++ b/projects/ts-etl-ui/src/load-version-report-comparison/load-version-report-comparison.component.html
@@ -1,5 +1,5 @@
-<div class="my-2">
-  <table mat-table [dataSource]="summaryDataSource">
+<div class="my-2 border-2 border-solid border-black">
+  <table mat-table [dataSource]="(summaryDataSource | async) || [] ">
     <ng-container matColumnDef="summary">
       <th mat-header-cell *matHeaderCellDef>Summary</th>
       <td mat-cell *matCellDef="let element">
@@ -25,7 +25,8 @@
     <tr mat-header-row *matHeaderRowDef="summaryColumn" class="bg-gray-300"></tr>
     <tr mat-row *matRowDef="let row; let even = even; columns: summaryColumn;" [ngClass]="{'bg-gray-100': even}"></tr>
   </table>
-
+</div>
+<div class="my-2 border-2 border-solid border-black">
   <table mat-table [dataSource]="dataTypeDataSource">
     <ng-container matColumnDef="dataType">
       <th mat-header-cell *matHeaderCellDef>Data Type</th>
