--- a/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
+++ b/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
@@ -2,16 +2,24 @@
 <form [formGroup]="addNoteForm">
   <mat-dialog-content class="mat-typography">
     <div class="flex flex-col">
-      <div formArrayName="hashtags">
-        <div *ngFor="let sc of hashtags.controls; let i = index">
-          <mat-form-field appearance="outline" >
-            <mat-label>Hashtags</mat-label>
-            <div >
-              <input matInput [formControlName]="i" placeholder="Choose a hashtag" (input)="sanitizeHashtags(i)">
-            </div>
-          </mat-form-field>
-        </div>
-      </div>
+      <mat-form-field appearance="outline" >
+        <mat-chip-grid #chipGrid aria-label="New Hashtag..." formControlName="hashtags">
+          @for (hashtag of hashtagsSig(); track hashtag) {
+            <mat-chip-row (removed)="removeHashtag(hashtag)">
+              {{hashtag}}
+              <button matChipRemove aria-label="'remove ' + hashtag">
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip-row>
+          }
+        </mat-chip-grid>
+        <input
+          placeholder="New keyword..."
+          [matChipInputFor]="chipGrid"
+          (matChipInputTokenEnd)="addHashtag($event)"
+        />
+      </mat-form-field>
+
       <mat-form-field appearance="outline">
         <mat-label>Note</mat-label>
         <textarea matInput placeholder="Note" formControlName="notes"></textarea>
