--- a/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
+++ b/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
@@ -2,16 +2,14 @@
 <form [formGroup]="addNoteForm">
   <mat-dialog-content class="mat-typography">
     <div class="flex flex-col">
-      <mat-form-field appearance="outline" >
+      <mat-form-field appearance="outline">
         <mat-chip-grid #chipGrid aria-label="New Hashtag..." formControlName="hashtags">
-          @for (hashtag of hashtagsSig(); track hashtag) {
-            <mat-chip-row (removed)="removeHashtag(hashtag)">
-              {{hashtag}}
-              <button matChipRemove aria-label="'remove ' + hashtag">
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip-row>
-          }
+          <mat-chip-row *ngFor="let hashtag of hashtagsSig()" (removed)="removeHashtag(hashtag)">
+            {{hashtag}}
+            <button matChipRemove aria-label="'remove ' + hashtag">
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
         </mat-chip-grid>
         <input
           placeholder="New keyword..."
