--- a/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
+++ b/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
@@ -12,7 +12,7 @@
           </mat-chip-row>
         </mat-chip-grid>
         <input
-          placeholder="New keyword..."
+          placeholder="New Hashtag..."
           [matChipInputFor]="chipGrid"
           (matChipInputTokenEnd)="addHashtag($event)"
         />
