--- a/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
+++ b/projects/ts-etl-ui/src/load-version-add-note-modal/load-version-add-note-modal.component.html
@@ -3,9 +3,21 @@
   <mat-dialog-content class="mat-typography">
     <div class="flex flex-col">
       <mat-form-field appearance="outline">
-        <mat-label>Hashtahgs</mat-label>
-        <textarea matInput placeholder="Hasthtags" formControlName="hashtags"></textarea>
+        <mat-chip-grid #chipGrid aria-label="New Hashtag..." formControlName="hashtags">
+          <mat-chip-row *ngFor="let hashtag of hashtagsSig()" (removed)="removeHashtag(hashtag)">
+            {{hashtag}}
+            <button matChipRemove aria-label="'remove ' + hashtag">
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
+        </mat-chip-grid>
+        <input
+          placeholder="New Hashtag..."
+          [matChipInputFor]="chipGrid"
+          (matChipInputTokenEnd)="addHashtag($event)"
+        />
       </mat-form-field>
+
       <mat-form-field appearance="outline">
         <mat-label>Note</mat-label>
         <textarea matInput placeholder="Note" formControlName="notes"></textarea>
